<resources>
    <string name="app_name">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="happy_question">Are you happy?</string>
    <string name="greeting_msg">Hello World!</string>
    <string name="yes_button">YES</string>
    <string name="yes_suggestion">If happy</string>
    <string name="no_button">NO</string>
    <string name="no_suggestion">If not happy</string>
</resources>
